# juliya-nails-fastapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  alembic.ini  config.py  config.yaml  database.py  docker-compose.yml  juliyanails.json  main.py  mypy.ini  posts.py  pyproject.toml  pytest.ini  requirements.txt  settings.py  utils.py
api/: __init__.py
api/v1/: auth.py  dependencies.py  entries.py  posts.py  services.py  socials.py  users.py
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/src/: main.py  utils.py
backend/src/api/: __init__.py
backend/src/api/v1/: auth.py  dependencies.py  entries.py  posts.py  services.py  socials.py  users.py
backend/src/core/: config.py
backend/src/core/conf/: db_config.py  email_config.py  redis_config.py  server_config.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0f26e43206a7_initial_revision.py  2024_04_07_1216-8e294ff68dda_added_onupdate_cascade.py
backend/src/models/: base.py  entries.py  posts.py  services.py  socials.py  users.py
backend/src/repositories/: auth.py  base.py  email.py  entries.py  posts.py  redis.py  services.py  socials.py  users.py
backend/src/schemas/: auth.py  base.py  entries.py  services.py  socials.py  users.py
backend/src/templates/: confirm_email.html  reset_password.html  welcome.html
backend/tests/: conftest.py  utils.py
backend/tests/api/auth/: test_activation.py  test_change_email.py  test_refresh_token.py  test_registration.py  test_reset_password.py
backend/tests/api/entries/: test_entries.py
backend/tests/api/misc/: test_utils.py
backend/tests/api/posts/: test_posts.py
backend/tests/api/services/: test_services.py
backend/tests/api/socials/: test_socials.py
backend/tests/api/users/: test_get_all.py  test_me.py  test_user_crud.py
core/: config.py
core/conf/: __init__.py  email_config.py  redis_config.py  server_config.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: HelloWorld.vue  JuliyaNails.vue
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue
migrations/: env.py
migrations/versions/: 108fe7a4e103_added_werty.py  489f039be824_added_services_and_entries_tables.py  64d4fe336109_added_completed_field_to_entry_model.py  9b037c07f3f1_added_social_table.py  9c6cc7609675_added_werty.py  a04b6c486a54_added_posts_table.py  d8613b5130d8_renaming_table_to_user.py  fa5dedf638e2_added_active_field_to_user_table.py
models/: base.py  entries.py  posts.py  services.py  socials.py  users.py
redis/: redis.conf
repositories/: auth.py  base.py  email.py  entries.py  posts.py  redis.py  services.py  socials.py  users.py
schemas/: auth.py  base.py  entries.py  posts.py  services.py  socials.py  users.py
services/: auth.py  base.py  posts.py  redis.py  socials.py  users.py
src/: database.py  main.py  utils.py
src/api/: __init__.py
src/api/v1/: auth.py  dependencies.py  entries.py  posts.py  services.py  socials.py  users.py
src/core/: config.py
src/core/conf/: auth_config.py  db_config.py  default_logging.yaml  redis_config.py  server_config.py
src/models/: base.py  entries.py  posts.py  services.py  socials.py  users.py
src/repositories/: auth.py  base.py  entries.py  posts.py  redis.py  services.py  socials.py  users.py
src/schemas/: auth.py  base.py  entries.py  posts.py  services.py  socials.py  users.py
src/templates/: reset_password.html
templates/: confirm_email.html  welcome.html
tests/: conftest.py  utils.py
tests/api/auth/: test_refresh_token.py  test_registration.py  test_reset_password.py
tests/api/entries/: test_entries.py
tests/api/misc/: test_utils.py
tests/api/posts/: test_posts.py
tests/api/services/: test_services.py
tests/api/socials/: test_socials.py
tests/api/users/: test_get_all.py  test_me.py  test_user_crud.py
tests/unit_tests/: test_auth.py  test_users.py  test_utils.py
